fix appearance on mobile devices

--- a/laptopWireframe.css
+++ b/laptopWireframe.css
@@ -104,10 +104,9 @@ h2 {
 	box-shadow: 0px 0px 6px #010101;
 	color: whitesmoke;
 	font-size: 24px;
-	width: 525px;
+	max-width: 525px;
 	height: 150px;
 	padding: 20px 40px;
-	min-width: 500px;
 }
 
 #Image-1-Container {
@@ -140,8 +139,7 @@ h2 {
 	box-shadow: 0px 0px 6px #010101;
 	color: whitesmoke;
 	font-size: 18px;
-	width: 525px;
-	min-width: 500px;
+	max-width: 525px;
 	height: 150px;
 	padding: 20px 40px;
 }
