--- a/tab1.css
+++ b/tab1.css
@@ -22,10 +22,9 @@ a:hover {
 	box-shadow: 0px 0px 6px #010101;
 	color: whitesmoke;
 	font-size: 18px;
-	width: 525px;
+	max-width: 525px;
 	height: 150px;
 	padding: 20px 40px;
-	min-width: 500px;
 }
 
 .Image-1-Container {
@@ -57,8 +56,7 @@ a:hover {
 	box-shadow: 0px 0px 6px #010101;
 	color: whitesmoke;
 	font-size: 18px;
-	width: 525px;
-	min-width: 500px;
+	max-width: 525px;
 	padding: 20px 40px;
 }
 
